add: stock by point sale
